load("@com_github_google_flatbuffers//:build_defs.bzl", "DEFAULT_FLATC_ARGS", "flatbuffer_cc_library")

flatbuffer_cc_library(
    name = "test_fbs",
    srcs = ["test.fbs"],
)

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    deps = [
        ":test_fbs",
        "@com_github_google_flatbuffers//:flatbuffers",
    ],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    deps = [
        ":test_fbs",
        "@com_github_google_flatbuffers//:flatbuffers",
        "@com_github_gtest//:gtest",
        "@com_github_gtest//:gtest_main",
    ],
)
